# handbook

./: .gitignore  .gitlab-ci.yml  .gitmodules  .renovaterc.json  Dockerfile  LICENSE.md  README.md  deploy.php  devenv.nix  devenv.yaml  docker-compose.yml  justfile  linkcheck.sh  lychee.toml  mkdocs.yml  nginx.conf  package-lock.json  pyproject.toml  term.kdl
.github/workflows/: main.yml
.gitlab-ci/: deploy.php
docker-dev/: Dockerfile  docker-compose.yml
docs/: contact.md  contribute.md  demo_access.md  deployment.md  docker.md  extra.css  forks.md  git.md  index.md  licenses.md  opensource.md
docs/blueprints/: cabinet.md  check-in.md  dispatch.md  dual-delivery.md  esign.md  greenlight.md  index.md  mono.md  plan.md  sublibrary.md
docs/cd/: apps.md  colors.md  fonts.md  icons.md  index.md  logo.md  naming.md  secondary-design-elements.md
docs/components/: base-person-bundle.md  base-person-connector-ldap-bundle.md  greenlight-connector-campusonline-bundle.md  pdf-as.md
docs/frameworks/: index.md
docs/frontend/: browser_support.md  configuration.md  frontend_auth.md  getting_started.md  index.md  keycloak_integration.md  theming.md  topics.md
docs/howtos/: about.md  deployment.md  docker.md  forks.md
docs/logo/: logo.md
docs/relay/: access_control.md  api_guide.md  base_entities.md  bundle_config.md  config.md  create_api.md  cron.md  debugging.md  errors.md  extending_with_bundles.md  faq.md  getting_started.md  health_checks.md  hooks.md  index.md  (+7 more)
fonts/: package-lock.json  package.json
frontend/: build.sh  package-lock.json  package.json
(+211 files in other folders)
