[tool.poetry]
name = "dbp-handbook"
version = "1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
mkdocs-material = "^9.0.6"
mkdocs-redirects = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
