[tool.poetry]
name = "dbp-handbook"
version = "1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.1.2"
mkdocs-material = "^9.0.6"
mkdocs-redirects = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
