[project]
name = "dbp-handbook"
version = "1.0"
description = ""
authors = [{ name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.1.2,<2",
    "mkdocs-material>=9.0.6,<10",
    "mkdocs-redirects>=1.2.0,<2",
]

[tool.uv]
package = false

[tool.poetry]
package-mode = false
